--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
@@ -27,13 +28,5 @@ jobs:
       - name: Install Xvfb
         run: sudo apt-get install xvfb
 
-      - name: Set up Xvfb
-        run: |
-          echo 'Xvfb :99 -screen 0 1280x1024x24' | sudo tee /etc/init/xvfb.conf
-          sudo service xvfb start
-
-      - name: Set up display
-        run: export DISPLAY=:99
-
-      - name: Run Tests
-        run: pytest tests/
+      - name: Run Tests with Xvfb
+        run: xvfb-run -a pytest tests/
